# chris_kinova_bringup

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: chris_kinect_bringup.launch  chris_kinect_hardware_bringup.launch  chris_kinova_bringup.launch  chris_kinova_controllers.launch  chris_kinova_gazebo.launch  chris_kinova_joint_controllers.launch  chris_kinova_lab_gazebo.launch  chris_kinova_lab_hardware.launch  chris_kinova_move_group.launch  chris_kinova_moveit_gazebo_demo.launch  chris_kinova_robot_gazebo.launch  chris_kinova_robot_hardware.launch  chris_kinova_rviz.launch  chris_kinova_trajectory_controllers.launch  chris_moveit_demo.launch  chris_moveit_m1n6s200_gazebo_demo.launch  m1n6s200_moveit_sensor_manager.launch.xml
param/: chris_kinova_lab.srdf  chris_kinova_rviz.rviz  joint_limits.yaml  laser_filters.yaml  m1n6s200_joint_controllers.yaml  m1n6s200_joint_state_controllers.yaml  m1n6s200_trajectory_controllers.yaml  sensor.yaml
urdf/: chris_kinova_lab.xacro
urdf/sensors/: hokuyo_urg04.urdf.xacro  hokuyo_urg04_gazebo.urdf.xacro  kinect.urdf.xacro  kinect_gazebo.urdf.xacro
